--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
 }
 body {
   font-family: sans-serif;
+  /* allungamento pagin, da modificare */
+  height: 20000px;
 }
 .container {
   position: relative;
@@ -49,7 +51,7 @@ body {
   background-color: blue;
 }
 /* main */
-/* parte1 */
+/* section 1 */
 .parte1 {
   height: 150px;
   background-color: red;
@@ -85,7 +87,7 @@ body {
   width: 100%;
   background-color: #cecece;
 }
-.parte3 {
+.parte3::after {
   content: '';
   display: table;
   clear: both;
@@ -109,4 +111,83 @@ body {
   width: 32%;
   height: 300px;
   background-color: #fff;
+}
+/* section 2*/
+.community {
+  height: 60px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  background-color: blue;
+}
+/* quattro colonne */
+.rettangoli {
+  height: 500px;
+  width: 100%;
+  background-color: lightgreen;
+  /* border-bottom: 1px solid #fff; */
+  padding-top: 20px;
+}
+.rettangoli {
+  content: '';
+  display: table;
+  clear: both;
+}
+.rettang {
+  float: left;
+  border-bottom: 3px solid #fff;
+  width: 20%;
+  height: 200px;
+  background-color: red;
+}
+.first {
+  margin-left: 100px;
+}
+.second {
+  border-left: 3px solid #fff;
+  border-right: 3px solid #fff;
+}
+.fourth {
+border-left: 3px solid #fff;
+}
+.followers {
+  height: 200px;
+  width: 100%;
+  background-color: purple;
+}
+.followers::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.zona {
+  float: left;
+  height: 100%;
+}
+.sinistra {
+  width: 40%;
+}
+.destra {
+  width: 60%;
+  border-left: 3px solid black;
+}
+.start {
+  height: 400px;
+  width: 100%;
+  background-color: yellow;
+}
+.start::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.ambiente {
+  float: left;
+  height: 100%;
+}
+.today {
+  width: 40%
+}
+.phil {
+  width: 60%;
+  border-left: 3px solid black;
 }
